fix .aligncenter margin auto overwritten by 1em rule

--- a/style.css
+++ b/style.css
@@ -106,9 +106,7 @@ figcaption {
 	}
 .aligncenter {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	margin: 1em;
+	margin: 1em auto;
 	}
 .size-lt-large .alignleft,
 .size-lt-large .alignright {
